# serialite

./: .gitignore  CMakeLists.txt  Justfile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.prod.defaults
components/app_watchdog/: CMakeLists.txt
components/app_watchdog/include/: app_watchdog.h
components/app_watchdog/src/: app_watchdog.c
components/ble_provisioning/: CMakeLists.txt
components/ble_provisioning/include/: ble_provisioning_policy.h  ble_provisioning_runtime.h
components/ble_provisioning/src/: ble_provisioning_policy.c  ble_provisioning_runtime.c
components/board/: CMakeLists.txt  idf_component.yml
components/board/include/: board_waveshare_amoled.h
components/board/src/: board_waveshare_amoled.c
components/config_transfer/: CMakeLists.txt
components/config_transfer/include/: config_transfer.h
components/config_transfer/src/: config_transfer.c
components/credentials/: CMakeLists.txt
components/credentials/include/: credentials.h
components/credentials/src/: credentials.c
components/demo_serial/: CMakeLists.txt
components/demo_serial/include/: demo_serial.h  demo_serial_runtime.h
components/demo_serial/src/: demo_serial.c  demo_serial_runtime.c
components/diagnostics_export/: CMakeLists.txt
components/diagnostics_export/include/: diagnostics_export.h
components/diagnostics_export/src/: diagnostics_export.c
components/event_log/: CMakeLists.txt
components/event_log/include/: event_log.h
components/event_log/src/: event_log.c
components/https_fingerprint/: CMakeLists.txt
components/https_fingerprint/include/: https_fingerprint.h
components/https_fingerprint/src/: https_fingerprint.c
components/local_pairing/: CMakeLists.txt
components/local_pairing/include/: local_pairing.h
components/local_pairing/src/: local_pairing.c
components/local_tls_identity/: CMakeLists.txt
components/local_tls_identity/include/: local_tls_identity.h
components/local_tls_identity/src/: local_tls_identity.c
components/lvgl_ui/: CMakeLists.txt
components/lvgl_ui/include/: lvgl_ui.h  ui_status_format.h  ui_web_url_policy.h
components/lvgl_ui/src/: lvgl_ui.c  ui_status_format.c  ui_web_url_policy.c
components/network_identity/: CMakeLists.txt
components/network_identity/include/: network_identity.h  network_identity_constants.h  network_identity_policy.h
components/network_identity/src/: network_identity.c  network_identity_policy.c
components/ota_update/: CMakeLists.txt
components/ota_update/include/: ota_update.h  ota_update_policy.h
components/ota_update/src/: ota_update.c  ota_update_policy.c
components/power_control/: CMakeLists.txt
components/power_control/include/: power_control.h
components/power_control/src/: power_control.c
components/power_status/: CMakeLists.txt
components/reset_control/: CMakeLists.txt
components/reset_control/include/: emergency_lock_gesture.h  power_button_gesture.h  reset_control.h  reset_gesture.h
components/reset_control/src/: emergency_lock_gesture.c  power_button_gesture.c  reset_control.c  reset_gesture.c
components/secret_display/: CMakeLists.txt
components/startup_policy/: CMakeLists.txt
components/storage/: CMakeLists.txt
components/terminal_bridge/: CMakeLists.txt
components/usb_console/: CMakeLists.txt
components/web_server/: CMakeLists.txt
components/web_server/assets/: xterm.js
components/web_server/include/: ap_exposure_policy.h  http_rate_limit.h  http_route_policy.h  web_demo_policy.h  web_input_policy.h  web_macro_policy.h  web_password_hash.h  web_security.h  web_server.h  web_terminal_ansi.h  web_terminal_contract.h  web_transport_policy.h
components/web_server/src/: ap_exposure_policy.c  esp_timer_linux_compat.c  http_rate_limit.c  http_route_policy.c  web_demo_policy.c  web_input_policy.c  web_macro_policy.c  web_password_hash.c  web_security.c  web_server.c  web_terminal_ansi.c  web_terminal_contract.c  web_transport_policy.c
components/wifi_ap/: CMakeLists.txt
components/wifi_client/: CMakeLists.txt
docs/: architecture-and-plan.md  ble-provisioning.md  development.md  feature-checklist.md  https-fingerprint.md  https-product-strategy.md  operational-label.md  production-hardening.md  security-test-matrix.md  ui-ux-design.md  webui-terminal-review-plan.md  wifi-client-mode.md  xterm-js-evaluation.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
scripts/: README.md  dev-verify.sh  lint_production_profile.py  package-release.sh  test_verify_production_profile.py  verify.sh  verify_production_profile.py
tests/: test_docs_hygiene.py  test_flash_latest_firmware.py  test_host_setup_script.py  test_lint_production_profile.py  test_package_release.py  test_web_harness.py
tests/host/: CMakeLists.txt  test_ap_exposure_policy.c  test_ble_provisioning_policy.c  test_ble_provisioning_runtime.c  test_config_transfer.c  test_credentials.c  test_credentials_boot_policy.c  test_demo_serial.c  test_diagnostics_export.c  test_emergency_lock_gesture.c  test_event_log.c  test_http_rate_limit.c  test_http_route_policy.c  test_https_fingerprint.c  test_local_pairing.c  test_local_tls_identity.c  test_network_identity_policy.c  test_operational_label_doc.c  test_ota_update_policy.c  test_power_button_gesture.c  test_reset_gesture.c  test_secret_display.c  test_startup_policy.c  test_storage_config.c  test_strict_rescue_security_contract.c  test_terminal_bridge_ring.c  test_terminal_scrollback.c  test_ui_status_format.c  test_ui_web_url_policy.c  test_web_demo_policy.c  test_web_input_policy.c  test_web_macro_policy.c  test_web_security.c  test_web_terminal_ansi.c  test_web_terminal_contract.c  test_web_transport_policy.c  test_wifi_ap_status_policy.c  test_wifi_client_policy.c
tools/: flash-latest-firmware.sh
tools/esp_http_harness/: .gitignore  CMakeLists.txt  package-lock.json  package.json  playwright.config.js  run_http_harness_tests.sh  sdkconfig.defaults
tools/host/: setup-linux-serial-console.sh
tools/web_harness/: esp32_kvm_web_harness.py  serialite_web_harness.py
(+62 files in other folders)
