idf_component_register(
    SRCS
        "app_main.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        storage
        credentials
        reset_control
        wifi_ap
        web_server
        usb_console
        lvgl_ui
        network_identity
        ota_update
        terminal_bridge
        startup_policy
)
