idf_component_register(
    SRCS
        "src/lvgl_ui.c"
        "src/ui_status_format.c"
        "src/ui_web_url_policy.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        app_watchdog
        board
        credentials
        esp_timer
        esp_lcd
        lvgl
        network_identity
        power_status
        secret_display
        terminal_bridge
        usb_console
        web_server
        wifi_ap
)
