idf_component_register(
    SRCS
        "src/ap_exposure_policy.c"
        "src/http_route_policy.c"
        "src/http_rate_limit.c"
        "src/web_server.c"
        "src/web_terminal_ansi.c"
        "src/web_terminal_contract.c"
        "src/web_input_policy.c"
        "src/web_demo_policy.c"
        "src/web_macro_policy.c"
        "src/web_password_hash.c"
        "src/web_security.c"
        "src/web_transport_policy.c"
    INCLUDE_DIRS
        "include"
    EMBED_FILES
        "assets/xterm.js"
        "assets/xterm.css"
    REQUIRES
        app_watchdog
        credentials
        demo_serial
        diagnostics_export
        event_log
        esp_app_format
        esp_http_server
        esp_https_server
        esp_timer
        https_fingerprint
        local_tls_identity
        mbedtls
        ota_update
        wifi_ap
        usb_console
        terminal_bridge
)

if(CONFIG_IDF_TARGET_LINUX)
    target_sources(${COMPONENT_LIB} PRIVATE "src/esp_timer_linux_compat.c")
endif()
